# BlueBalls

./: README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0229d87c921c_add_registry.py  2bb22acdd00b_add_column_descriptions.py  350a155c8e4b_add_registry.py  53902a9d67be_add_registry.py  53ff1266b67b_add_registry.py  693811a8ec49_initial_setup.py  a77325812c07_add_dataset_overview_stats.py  bcd70d758879_add_registry.py  e1be8c70526d_add_registry.py
backend/app/: main.py  utils.py
backend/app/api/v1/: api.py
backend/app/api/v1/routes/: charts.py  column_bar.py  data_ingestion.py  dataset.py
backend/app/core/: config.py  db.py  llm.py  logging.py  rate_limit.py  redis.py
backend/app/models/: dataset_registry.py
backend/app/schemas/: llm_schema.py
backend/app/services/: ai_charts.py  ai_metadata.py  chart_generator.py  dataset_service.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: add-block-panel.tsx  aichat-panel.tsx  app-sidebar.tsx  column-bar-panel.tsx  filter-panel.tsx  grid-panel.tsx  header-panel.tsx  image-panel.tsx  metric-kpi-panel.tsx  rich-text-block.tsx
